@@ -8,6 +8,7 @@ OpenLDAP 2.4.22 Engineering
 	Fixed slapo-dynlist REP_ENTRY flag handling (ITS#5340,ITS#6423)
 	Fixed slapo-rwm olcRwmMap handling (ITS#6436)
 	Fixed slapo-rwm REP_ENTRY flag handling (ITS#5340,ITS#6423)
+	Fixed slapo-syncprov memory leak (ITS#6459)
 	Fixed slapo-valsort REP_ENTRY flag handling (ITS#5340,ITS#6423)
 
 OpenLDAP 2.4.21 Release (2009/12/20)
